typescript/checker/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode13.ts.stderr
error: 'eval' and 'arguments' cannot be used as a binding identifier in strict mode
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode13.ts:4:7
  |
4 | catch(eval) {
  |       ^^^^

